framec_tests/language_specific/python/v3_capabilities/system_params/negative/system_params_duplicate_decl_v3.frm
@target python_3

# @expect: E111
# @core

system SystemParamsDupPy(color, color) {
    machine:
        $Red(color) { }
}
